--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,39 @@
 @tailwind utilities;
 
 
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('/fonts/ubuntu.woff2') format('woff2'),
+         url('/fonts/ubuntu.woff') format('woff');
+    
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  body {
+    font-family: 'Ubuntu', sans-serif; 
+    background-color: #408692;
+    color: #ffffff;
+  }
+
+  @layer base {
+    /* Text-underline-animation styles */
+    .text-underline-animation {
+      text-decoration: none;
+      background: linear-gradient(currentColor, currentColor) bottom / 0 .2em no-repeat;
+      transition: 1s background-size;
+    }
+  
+    .text-underline-animation:hover {
+      background-size: 100% .2em;
+    }
+  
+    /* Variations */
+    .text-underline-left {
+      background-position: left bottom;
+    }
+  
+    .text-underline-right {
+      background-position: right bottom;
+    }
+  }
