--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,10 @@
     font-weight: normal;
     font-style: normal;
   }
+
+  html {
+    scroll-behavior: smooth;
+  }
   
   body {
     font-family: 'Ubuntu', sans-serif; 
