--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,3 +43,34 @@
       background-position: right bottom;
     }
   }
+
+  .swiper-pagination-bullet-active {
+    background-color: #408692 !important;
+  }
+
+  .swiper-button-next, .swiper-button-prev {
+    color: #408692 !important;
+  }
+
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  @media (max-width: 768px) {
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+    }
+  }
